--- a/main.css
+++ b/main.css
@@ -412,15 +412,17 @@ section h2:after {
 }
 
 .about-content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 3rem;
+  display: flex;
+ 
   align-items: center;
   opacity: 0;
   transform: translateY(30px);
   transition: all 0.8s ease-out;
 }
-
+.about-text p{
+  align-content: center;
+  font-weight: 400;
+}
 .about.animate-visible .about-content {
   opacity: 1;
   transform: translateY(0);
